--- a/lib/server/package.json
+++ b/lib/server/package.json
@@ -12,13 +12,17 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "ip": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
