--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   gap: ^3.0.1
+  http: ^1.3.0
+  file_picker: ^8.3.1
 
 dev_dependencies:
   flutter_test:
